--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@ Treasurer - Logan Miller (millerll21@wasdpa.org)<br>
 Historian - Kyle Beelitz (beelitzkp19@wasdpa.org)<br>
 Advisor&nbsp;- Mr. Dietrich (wyatt_dietrich@wasdpa.org)</span></p>
 
-<p class="font_8" style="font-size:20px;"><span style="font-size:20px;"><span class="wixGuard">​</span></span></p>
 
-<p class="font_8"><span style="font-size:20px;">The above emails can only be reached if logged into a wasdpa.org email. If you are using a different email, contact <object height="0"><a class="auto-generated-link" data-auto-recognition="true" data-content="waynesborotsa@gmail.com" href="mailto:waynesborotsa@gmail.com" data-type="mail">waynesborotsa@gmail.com</a></object> instead.</span></p></div><div class="txtNew" id="comp-jc293zo8" style="top: 7px; left: 0px; width: 304px; position: absolute;"><h2 class="font_2">Contact</h2></div></div></div></div></section><div class="txtNew" id="comp-j9vyyes0" style="top: -21px; left: 15px; width: 304px; position: absolute;"><h6 class="font_6" style="font-size:18px;"><span style="font-size:18px;">WAYNESBORO</span></h6></div><div class="txtNew" id="comp-jc284h66" style="top: 0px; left: 0px; width: 449px; position: absolute;"><h2 class="font_2">What is TSA?</h2></div><div class="txtNew" id="comp-jc285svd" style="left: 0px; width: 478px; position: absolute; top: 86px;"><p class="font_8" style="font-size:20px;"><span style="font-size:20px;"><span class="color_15"><span style="font-family:helvetica-w01-light, helvetica-w02-light, sans-serif;">Technology
- Student Association, or TSA, is a national organization spanning 
+
+<p class="font_8"><span style="font-size:20px;">The above emails can only be reached if logged into a wasdpa.org email. If you are using a different email, contact waynesborotsa@gmail.comStudent Association, or TSA, is a national organization spanning 
 forty-nine states. It encourages its over two million members to pursue 
 their interests in the STEM related fields - Science, Technology, 
 Engineering, and Math. In order to do this, TSA hosts numerous 
